--- a/Conciliacao/webapp/Views/Shared/_Aside.cshtml
+++ b/Conciliacao/webapp/Views/Shared/_Aside.cshtml
@@ -48,6 +48,9 @@
                                     <li class="@Html.RouteIf("ExtratoBin", "active")">
                                         <a href="@Url.Action("Processar", "ExtratoBin")">&nbsp;&nbsp;Bin/FirstData</a>
                                     </li>
+                                    <li class="@Html.RouteIf("ExtratoGetNet", "active")">
+                                        <a href="@Url.Action("Processar", "ExtratoGetNet")">&nbsp;&nbsp;GetNet</a>
+                                    </li>
 
 
                                   <!--  <li class="Html.RouteIf("Processar", "active")">
