--- a/Conciliacao/webapp/Views/Conciliador/ListarCompletoArquivo.cshtml
+++ b/Conciliacao/webapp/Views/Conciliador/ListarCompletoArquivo.cshtml
@@ -34,7 +34,7 @@
                 Plano
             </th>
             <th>
-                Tp.Transação
+                Tp.Transação&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </th>
             <th>
                 Apresentação
@@ -49,25 +49,25 @@
                 Cartão
             </th>
             <th>
-                Sinal Vl.Bruto
+                Sinal.Vl.Bruto
             </th>
             <th>
                 Vl.Bruto
             </th>
             <th>
-                Sinal Comissão
+                Sinal.Comissão
             </th>
             <th>
                 Comissão
             </th>
             <th>
-                Sinal Rejeitado
+                Sinal.Rejeitado
             </th>
             <th>
                 Vl.Rejeitado
             </th>
             <th>
-                Sinal Liquído
+                Sinal.Liquído
             </th>
             <th>
                 Vl.Liquído
@@ -95,22 +95,22 @@
                 Agência
             </th>
             <th>
-                Conta Corrente
+                Conta.Corrente
             </th>
             <th>
-                Status.Pagto
+                Status.Pagto&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </th>
             <th>
                 Motivo.Rejeição
             </th>
             <th>
-                Cvs Aceitos
+                Cvs.Aceitos
             </th>
             <th>
                 Produto&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </th>
             <th>
-                Cvs Reijeitados
+                Cvs.Reijeitados
             </th>
             <th>
                 Dt.Venda
@@ -134,7 +134,7 @@
                 Bandeira
             </th>
             <th>
-                Número Único RO
+                Número.Único.RO
             </th>
             <th>
                 Taxas.Comissão
