--- a/Conciliacao/webapp/Views/Usuario/incluir.cshtml
+++ b/Conciliacao/webapp/Views/Usuario/incluir.cshtml
@@ -69,6 +69,14 @@
             </div>
         </section>
 
+        
+        @using (Html.BeginForm("CadastrarUsuario", "usuario", FormMethod.Post, new { @class = "form-horizontal smart-form", enctype = "multipart/form-data" }))
+        {
+
+        }
+
+
+
     </fieldset>
 
     <footer>
